--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,7 @@
       content="interactive bullet journal"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
+    <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
